# gitlab.duoshengbu.com/be/dsb-server-proto/work/sg/server/v1/api.bm.go
@@ -1,49 +1,0 @@
-// Code generated by protoc-gen-bm v0.1, DO NOT EDIT.
-// source: work/sg/server/v1/api.proto
-
-/*
-Package v1 is a generated blademaster stub package.
-This code was generated with kratos/tool/protobuf/protoc-gen-bm v0.1.
-
-package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
-
-It is generated from these files:
-	work/sg/server/v1/api.proto
-*/
-package v1
-
-import (
-	"context"
-
-	bm "github.com/bilibili/kratos/pkg/net/http/blademaster"
-	"github.com/bilibili/kratos/pkg/net/http/blademaster/binding"
-)
-
-// to suppressed 'imported but not used warning'
-var _ *bm.Context
-var _ context.Context
-var _ binding.StructValidator
-
-var PathDsbApiSendMessage = "/dsbServer/sendMessage"
-
-// DsbApiBMServer is the server API for DsbApi service.
-type DsbApiBMServer interface {
-	SendMessage(ctx context.Context, req *DsbMessageReq) (resp *DsbMessageResp, err error)
-}
-
-var v1DsbApiSvc DsbApiBMServer
-
-func dsbApiSendMessage(c *bm.Context) {
-	p := new(DsbMessageReq)
-	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
-		return
-	}
-	resp, err := v1DsbApiSvc.SendMessage(c, p)
-	c.JSON(resp, err)
-}
-
-// RegisterDsbApiBMServer Register the blademaster route
-func RegisterDsbApiBMServer(e *bm.Engine, server DsbApiBMServer) {
-	v1DsbApiSvc = server
-	e.POST("/dsbServer/sendMessage", dsbApiSendMessage)
-}
